<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    android:id="@+id/rel_activity_permission"
    android:background="@color/background_grey"
    tools:context=".getpermission.view.PermissionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/ll_card"
        android:paddingTop="10dp"
        android:layout_centerInParent="true">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding"
                android:layout_marginBottom="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cannot_locate"
                    android:textSize="@dimen/medium_textsize"
                    android:textColor="@color/black"
                    android:gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_your_city"
                    android:textColor="@color/text_colour"
                    android:layout_marginTop="@dimen/para_margin"
                    android:textSize="@dimen/small_textsize"
                    android:layout_marginLeft="@dimen/padding"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/big_textsize"
                    android:inputType="textCapSentences"
                    android:hint="@string/enter_your_city"
                    android:id="@+id/edt_city"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/rel_next"
        android:background="@drawable/circle_orange"
        android:layout_below="@id/ll_card"
        android:layout_marginTop="-20dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_arrow"/>
    </RelativeLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/ll_card"
        app:srcCompat="@drawable/ic_cannot_find"/>

</RelativeLayout>