<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/rel_location_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/transparent">

    <LinearLayout
        android:layout_width="@dimen/dialog_width"
        android:layout_height="@dimen/dialog_height"
...
                            android:text="@string/requirement_2"/>
                    </LinearLayout>

                    <Button
                        android:layout_width="@dimen/button_width"
                        android:layout_height="@dimen/button_height"
                        android:id="@+id/btn_grand_permission"
                        android:text="@string/grand_permission"
                        android:textAllCaps="false"
                        style="@style/Button"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/para_margin"/>

...
